fixed [style]: remove horizontal overflow and fixed position of main section of app components

--- a/app/styles/components/pages/deals.scss
+++ b/app/styles/components/pages/deals.scss
@@ -1,4 +1,5 @@
 .crm {
+  margin-left: 70px;
   .deals {
     min-height: 100vh;
     .deal-create {
